Refactor with useReducer

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Azeret+Mono&family=VT323&display=swap" rel="stylesheet">
 
-    <title>Stephen Thompson</title>
+    <title>Epidemic Simulator</title>
   </head>
   <body
   style="font-family: Arial">
