--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Azeret+Mono&family=VT323&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Saira+Semi+Condensed&display=swap" rel="stylesheet">
 
     <title>Epidemic Simulator</title>
   </head>
   <body
-  style="font-family: Arial">
+  style="font-family: Saira Semi Condensed">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
